--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fh-mobile-core",
-  "version": "0.1.0",
+  "name": "@akeating-redhat/fh-mobile-core",
+  "version": "0.5.0",
   "description": "Core SDK for the FeedHenry Mobile Control Panel",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
